--- a/Docker.Dotnet.UI/Components/Pages/ContainersPage.razor
+++ b/Docker.Dotnet.UI/Components/Pages/ContainersPage.razor
@@ -120,7 +120,7 @@
                                                    Color="Color.Warning"
                                                    Size="Size.Small"
                                                    OnClick="@(() => HandleStopContainer(container.ID))"
-                                                   Title="停止" />
+                                                   title="停止" />
                                 }
                                 else
                                 {
@@ -128,20 +128,20 @@
                                                    Color="Color.Success"
                                                    Size="Size.Small"
                                                    OnClick="@(() => HandleStartContainer(container.ID))"
-                                                   Title="启动" />
+                                                   title="启动" />
                                 }
                                 
                                 <MudIconButton Icon="@Icons.Material.Filled.Delete" 
                                                Color="Color.Error"
                                                Size="Size.Small"
                                                OnClick="@(() => HandleDeleteContainer(container.ID))"
-                                               Title="删除" />
+                                               title="删除" />
                                 
                                 <MudIconButton Icon="@Icons.Material.Filled.MoreHoriz" 
                                                Color="Color.Primary"
                                                Size="Size.Small"
                                                OnClick="@(() => HandleMoreOptions(container.ID))"
-                                               Title="更多" />
+                                               title="更多" />
                             </MudStack>
                         </MudItem>
                     </MudGrid>
