--- a/Docker.Dotnet.UI/Components/Pages/ImagesPage.razor
+++ b/Docker.Dotnet.UI/Components/Pages/ImagesPage.razor
@@ -92,13 +92,13 @@
                                                Color="Color.Error"
                                                Size="Size.Small"
                                                OnClick="@(() => Vm.DeleteImageAsync(image.ID))"
-                                               Title="删除" />
+                                               title="删除" />
                                 
                                 <MudIconButton Icon="@Icons.Material.Filled.Info" 
                                                Color="Color.Primary"
                                                Size="Size.Small"
                                                OnClick="@(() => Vm.GoToImageDetailsAsync(image.ID))"
-                                               Title="详情" />
+                                               title="详情" />
                             </MudStack>
                         </MudItem>
                     </MudGrid>
